# ffmepg

./: build.gradle  configs2.gradle  readme.md
app/: build.gradle
app/src/androidTest/java/com/stone/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg-extract-audio.cpp  ffmpeg-extract-audio.h  ffmpeg-file.cpp  ffmpeg-file.h  ffmpeg-log.h  ffmpeg-stone-lib.cpp
app/src/main/java/com/stone/ffmpeg/: MainActivity.kt
app/src/test/java/com/stone/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
